matroskademux: Add AAC profile/level to the caps

https://bugzilla.gnome.org/show_bug.cgi?id=703312